# pm

./: .cursorignore  .gitignore  0cKcl8tvl17paY1Rlcxu  CHAMPIONING_AN_EIP.md  CHAMPION_AN_EIP.md  CONTRIBUTING.md  LICENSE  Meeting 113.md  Meeting 165.md  Meeting 63.md  PR_REVIEW_NOTE.md  README.md  SECURITY.md  all-forks.json  call_107.md  cspell.json  meeting_topic_mapping.json
.github/ACDbot/: .gitignore  README.md  ZOOM_SETUP.md  call_series_config.yml  meeting_topic_mapping.json  pyproject.toml  pytest.ini  requirements.txt
.github/ACDbot/ACDbot.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt
.github/ACDbot/artifacts/: manifest.json
.github/ACDbot/docs/: new_call_series_checklist.md  recall_gallery_v2_spike.md  video_sandwich_test.md
.github/ACDbot/modules/: breakout_utils.py  call_series_config.py  cli.py  datetime_utils.py  discord_notify.py  discourse.py  email_utils.py  farcaster.py  form_parser.py  gcal.py  logging_config.py  mapping_manager.py  mapping_utils.py  rss_utils.py  telegram.py  tg.py  transcript.py  youtube_utils.py  zoom.py
.github/ACDbot/scripts/: calendar_eid_converter.py  cancel_unmapped_meetings.py  close_stale_meetings.py  compose_zoom_recording.py  compose_zoom_sandwich.py  discord_notify.py  generate_resource_comment.py  get_refresh_token.py  get_zoom_token.py  handle_issue.py  handle_protocol_call.py  ingest_manual_meeting.py  poll_zoom_recordings.py  recall_gallery_v2_spike.py  refresh_youtube_token.py  retire_call_series.py  send_recording_email.py  serve_rss.py  upcoming_calls.py  upload_zoom_recording.py
.github/ACDbot/scripts/asset_pipeline/: README.md  apply_changelog.py  composed_recording_sync.py  ethereum_vocab.yaml  (+8 more)
.github/ACDbot/tests/: __init__.py  conftest.py  test_parser.py
(+1447 files in other folders)
