[build-system]
requires = ["setuptools>=66.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ACDbot"
version = "1.0.0"
description = "A bot for handling issues."
authors = [
    { name = "Nicolas Consigny", email = "nicolas.consigny@ethereum.org" }
]
readme = "README.md"
license = "CC-BY-SA-3.0"
keywords = ["github-actions", "automation", "zoom", "discourse"]
requires-python = ">=3.10"

dependencies = [
    "anthropic>=0.40.0,<1.0.0",
    "click==8.1.7",
    "google-api-python-client==2.157.0",
    "google-auth>=1.30.0",
    "google-auth-oauthlib==1.2.1",
    "protobuf>=3.18.3",
    "PyGithub==2.5.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=0.20.0",
    "python-telegram-bot>=21.0",
    "pytz==2022.1",
    "PyYAML>=6.0",
    "requests==2.33.1",
    "requests-oauthlib",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[tool.setuptools.packages.find]
include = ["modules*", "scripts*"]
